test/pass/classes/class_static_call.lly
class Point(x: integer, y: integer)
{
    var @x = x
    var @y = y
    define clone : Point {
        return Point::new(@x, @y)
    }
}

var original = Point::new(1, 2)
var copy = original.clone()
copy.x = 3
copy.y = 4

var results = [original.x, original.y, copy.x, copy.y]

if results != [1, 2, 3, 4]:
    stderr.write("Failed.\n")
